# ADP-Project

./: README.md  head_to_head_launch.xml  laser_models.py  test_race_line_viz.sh
controller_cpp/controller_cpp/include/: pp.hpp
controller_cpp/controller_cpp/src/: pp.cpp
controller_cpp/include/: pp.hpp
controller_cpp/src/: curvature.cpp  stanley.cpp  stanley_node.cpp
controller_cpp_origin/src/: pp.cpp
controller_cpp_origin_2/: CMakeLists.txt
controller_cpp_origin_2/include/: pp.hpp
controller_cpp_origin_2/src/: controller_manager_cpp.cpp  curvature_node.cpp  pp.cpp
controller_cpp_origin_4/: CMakeLists.txt
controller_cpp_origin_4/controller_cpp/src/: controller_manager_cpp.cpp  curvature.cpp  stanley.cpp
controller_cpp_origin_4/include/: curvature.hpp  pp.hpp  stanley.hpp
controller_cpp_origin_4/launch/: controller_launch.xml
controller_cpp_origin_4/src/: pp.cpp
global_planner/: CMakeLists.txt  README.md  TOPIC_ANALYSIS.md  install_global_racetrajectory_optimization.sh  package.xml
global_planner/include/: centerline_extractor.hpp  curvature_planner.hpp  file_writer.hpp  global_planner_node.hpp  sector_divider.hpp  time_optimal_planner.hpp  utils.hpp  velocity_planner.hpp
global_planner/include/global_planner/: global_planner_logic.hpp  global_planner_utils.hpp  readwrite_global_waypoints.hpp  trajectory_optimizer_wrapper.hpp
global_planner/msg/: WpntArray.msg
global_planner/python_modules/: __init__.py
global_planner/python_modules/global_racetrajectory_optimization/: HYBRID_OPTIMIZATION_COMPLETE_GUIDE.md  HYBRID_OPTIMIZER_IMPLEMENTATION_EXAMPLE.py  HYBRID_OPTIMIZER_INTEGRATION_GUIDE.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_STRATEGY_COMPARISON.py  README_HYBRID_OPTIMIZATION.md  main_globaltraj.py  test_hybrid_optimization.sh
global_planner/python_modules/global_racetrajectory_optimization/global_racetrajectory_optimization/: trajectory_optimizer.py
global_planner/python_modules/global_racetrajectory_optimization/global_racetrajectory_optimization/helper_funcs_glob/src/: __init__.py  clothoid_spline.py  hybrid_optimizer.py  prep_track.py
global_planner/src/: centerline_extractor.cpp  curvature_planner.cpp  file_writer.cpp  global_planner_logic.cpp  global_planner_node.cpp  global_planner_utils.cpp  global_trajectory_publisher.cpp  readwrite_global_waypoints.cpp  sector_divider.cpp  sector_divider_example.cpp  time_optimal_planner.cpp  trajectory_optimizer_wrapper.cpp  utils.cpp  velocity_planner.cpp
spline_planner_cpp/: CMakeLists.txt  FLC_TEB_FORMULAS.md  package.xml
spline_planner_cpp/include/spline_planner_cpp/: fuzzy_controller.hpp  spline_planner_node.hpp  teb.hpp
spline_planner_cpp/launch/: spline_planner_launch.xml
spline_planner_cpp/src/: fuzzy_controller.cpp  spline_planner_node.cpp  teb.cpp
stack_master/launch/: head_to_head_launch.xml
stack_master/stack_master/: global_parameter_node.py
teb_local_planner/include/teb_local_planner/: local_planner_node.hpp
teb_local_planner/src/: local_planner_node.cpp
teb_planner/: CMakeLists.txt  TEB_PLANNER_LOGIC.md  package.xml
teb_planner/include/teb_planner/: spline_planner_node.hpp
teb_planner/launch/: spline_planner_launch.xml
teb_planner/src/: fuzzy_controller.cpp  spline_planner_node.cpp  teb.cpp
