<?xml version="1.0"?>
<package format="3">
  <name>global_planner</name>
  <version>0.0.1</version>
  <description>The global_planner package</description>

  <maintainer email="eunjicui633@gmail.com">choieunji</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>f110_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
